[gd_scene load_steps=8 format=3 uid="uid://cynaphj5tfkt8"]

[ext_resource type="Script" uid="uid://b8yq8oyeptc1b" path="res://Scripts/main_menu.gd" id="1_1ehe0"]
[ext_resource type="Theme" uid="uid://ca0rvbb2ul3rx" path="res://Scenes/Main_Menu_Theme.tres" id="2_ce3w2"]
[ext_resource type="Script" uid="uid://dmjnnny14vhwg" path="res://Scenes/Main Menu Navigation.gd" id="2_n45e2"]
[ext_resource type="Script" uid="uid://uimfkrc3hfoe" path="res://Scenes/Lobby_Chat.gd" id="3_1ehe0"]
[ext_resource type="Script" uid="uid://c4n7cwmeffl2m" path="res://Scenes/Player_Lobby_Main_Script.gd" id="4_cp0ys"]
[ext_resource type="Script" uid="uid://cyqgclieb406q" path="res://Scenes/lobby_ready_button.gd" id="4_opfnp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ce3w2"]
bg_color = Color(0.35, 0.306367, 0.231, 0.431373)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Menu" type="Node"]
script = ExtResource("1_1ehe0")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://jfyf77tcbqro")
spawn_path = NodePath("../Level Spawner")
spawn_limit = 1

[node name="Level Spawner" type="Node" parent="."]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_ce3w2")
script = ExtResource("2_n45e2")

[node name="CanvasLayer" type="CanvasLayer" parent="Control"]
follow_viewport_enabled = true

[node name="Title" type="Label" parent="Control/CanvasLayer"]
visible = false
anchors_preset = -1
anchor_left = 0.370292
anchor_top = 0.292796
anchor_right = 0.686
anchor_bottom = 0.444
offset_left = 49.04
offset_top = 26.78
offset_right = -52.1201
offset_bottom = -0.52005
scale = Vector2(1.2, 1.2)
pivot_offset = Vector2(247, 135)
theme_override_font_sizes/font_size = 69
text = "CARDS IMPACT"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Subtitle" type="Label" parent="Control/CanvasLayer/Title"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.287109
anchor_top = 0.632625
anchor_right = 0.691109
anchor_bottom = 0.84636
offset_left = -0.207306
offset_top = 0.0593262
offset_right = 0.216675
offset_bottom = -0.00867462
pivot_offset = Vector2(219.649, 33.227)
text = "A game by Killer and Gian"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Play" type="Button" parent="Control/CanvasLayer"]
anchors_preset = -1
anchor_left = 0.793
anchor_top = 0.686
anchor_right = 1.0
anchor_bottom = 0.847
offset_right = -10.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("2_ce3w2")
theme_override_font_sizes/font_size = 50
text = "Play"

[node name="Exit" type="Button" parent="Control/CanvasLayer"]
anchors_preset = -1
anchor_left = 0.794
anchor_top = 0.856
anchor_right = 1.0
anchor_bottom = 0.968
offset_left = 43.3198
offset_top = 0.519958
offset_right = -59.4401
offset_bottom = 0.039917
pivot_offset = Vector2(21.64, 0)
theme = ExtResource("2_ce3w2")
theme_override_font_sizes/font_size = 31
text = "Exit"

[node name="Back to Start Menu Button" type="Button" parent="Control/CanvasLayer"]
anchors_preset = -1
anchor_left = 0.00729167
anchor_top = 0.907
anchor_right = 0.159167
anchor_bottom = 0.985185
offset_top = 0.219971
offset_right = 0.199982
grow_vertical = 0
theme = ExtResource("2_ce3w2")
text = "Back to Start Menu"
metadata/_edit_use_anchors_ = true

[node name="Lobby Ready Button" type="Button" parent="Control/CanvasLayer"]
visible = false
anchors_preset = -1
anchor_left = 0.804
anchor_top = 0.033
anchor_right = 0.983
anchor_bottom = 0.117
offset_left = 0.159973
offset_top = 0.18
offset_right = 0.319946
offset_bottom = -0.180004
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("2_ce3w2")
toggle_mode = true
text = "Ready"
script = ExtResource("4_opfnp")
metadata/_edit_use_anchors_ = true

[node name="Single Or Multiplayer" type="Control" parent="Control"]
layout_mode = 1
anchor_left = 0.341083
anchor_right = 0.697083
anchor_bottom = 1.0
offset_left = -0.880005
offset_right = 0.23999
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(342.32, 220)
theme = ExtResource("2_ce3w2")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Single Or Multiplayer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.326
anchor_top = 0.456
anchor_right = 0.674
anchor_bottom = 0.544
offset_left = -0.919983
offset_top = 0.519958
offset_right = -0.0879517
offset_bottom = 5.47998
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(125, 50)
theme_override_constants/separation = 15
alignment = 1

[node name="Single player Button" type="Button" parent="Control/Single Or Multiplayer/VBoxContainer"]
layout_mode = 2
text = "Single Player"

[node name="Multiplayer Button" type="Button" parent="Control/Single Or Multiplayer/VBoxContainer"]
layout_mode = 2
text = "Multi Player"

[node name="Multiplayer Local or Steam" type="Control" parent="Control"]
visible = false
layout_mode = 1
anchor_left = 0.223
anchor_right = 0.777
anchor_bottom = 1.0
offset_left = 0.839996
offset_right = -0.839966
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Multiplayer Local or Steam"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 625.0
offset_top = 493.0
offset_right = -625.0
offset_bottom = -493.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Public Multiplayer Button" type="Button" parent="Control/Multiplayer Local or Steam/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Public"

[node name="Local Multiplayer Button" type="Button" parent="Control/Multiplayer Local or Steam/VBoxContainer"]
layout_mode = 2
text = "Local"

[node name="Local Multiplayer" type="Control" parent="Control"]
visible = false
layout_mode = 1
anchor_left = 0.221
anchor_right = 0.779
anchor_bottom = 1.0
offset_left = 0.679962
offset_right = -0.680054
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Local Multiplayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 625.0
offset_top = 493.0
offset_right = -625.0
offset_bottom = -493.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Host Local Buton" type="Button" parent="Control/Local Multiplayer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Host
"

[node name="Join Local Buton" type="Button" parent="Control/Local Multiplayer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="Public Multiplayer" type="Control" parent="Control"]
visible = false
layout_mode = 1
anchor_left = 0.384375
anchor_top = 0.425926
anchor_right = 0.617708
anchor_bottom = 0.962963
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="Control/Public Multiplayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ce3w2")
metadata/_edit_use_anchors_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="Control/Public Multiplayer/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0254237
anchor_top = 0.0184332
anchor_right = 0.980226
anchor_bottom = 0.990783
offset_left = -0.5
offset_right = 0.5
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Public Multiplayer/Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Public Multiplayer"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.799107
anchor_top = 0.0206897
anchor_right = -0.111607
anchor_bottom = 0.303448
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
metadata/_edit_use_anchors_ = true

[node name="Host Multiplayer Steam Buton" type="Button" parent="Control/Public Multiplayer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Host
"

[node name="Join Multiplayer Steam Buton" type="Button" parent="Control/Public Multiplayer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="Refresh Lobby List" type="Button" parent="Control/Public Multiplayer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.09821
anchor_top = 0.0206897
anchor_right = 1.65179
anchor_bottom = 0.127586
grow_horizontal = 2
grow_vertical = 2
text = "Refresh"
metadata/_edit_use_anchors_ = true

[node name="Public Multiplayer Lobby" type="Control" parent="Control"]
visible = false
layout_mode = 1
anchor_left = 0.00520833
anchor_top = 0.00740741
anchor_right = 0.787
anchor_bottom = 0.899
offset_right = -0.0401611
offset_bottom = 0.0799561
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Public Multiplayer Lobby"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Players List Panel" type="Panel" parent="Control/Public Multiplayer Lobby/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Public Multiplayer Lobby/VBoxContainer/Players List Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.187
offset_bottom = -32.897
grow_horizontal = 2
script = ExtResource("4_cp0ys")

[node name="Player_Stats_Header_HBOX" type="HBoxContainer" parent="Control/Public Multiplayer Lobby/VBoxContainer/Players List Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 280
metadata/_edit_use_anchors_ = true

[node name="Name" type="Label" parent="Control/Public Multiplayer Lobby/VBoxContainer/Players List Panel/VBoxContainer/Player_Stats_Header_HBOX"]
layout_mode = 2
text = "Name"

[node name="Civilization" type="Label" parent="Control/Public Multiplayer Lobby/VBoxContainer/Players List Panel/VBoxContainer/Player_Stats_Header_HBOX"]
layout_mode = 2
text = "Civilization"

[node name="Status" type="Label" parent="Control/Public Multiplayer Lobby/VBoxContainer/Players List Panel/VBoxContainer/Player_Stats_Header_HBOX"]
layout_mode = 2
text = "Status"

[node name="Player_1_Stats_HBOX" type="HBoxContainer" parent="Control/Public Multiplayer Lobby/VBoxContainer/Players List Panel/VBoxContainer"]
layout_mode = 2
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Public Multiplayer Lobby/VBoxContainer/Players List Panel/VBoxContainer/Player_1_Stats_HBOX"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 295
alignment = 1

[node name="Player Name" type="Label" parent="Control/Public Multiplayer Lobby/VBoxContainer/Players List Panel/VBoxContainer/Player_1_Stats_HBOX/HBoxContainer"]
layout_mode = 2
text = "Host"

[node name="Player Civilization" type="Label" parent="Control/Public Multiplayer Lobby/VBoxContainer/Players List Panel/VBoxContainer/Player_1_Stats_HBOX/HBoxContainer"]
layout_mode = 2
text = "Furry"

[node name="Player Status" type="Label" parent="Control/Public Multiplayer Lobby/VBoxContainer/Players List Panel/VBoxContainer/Player_1_Stats_HBOX/HBoxContainer"]
layout_mode = 2
text = "Not Ready"

[node name="Player_2_Stats_HBOX" type="HBoxContainer" parent="Control/Public Multiplayer Lobby/VBoxContainer/Players List Panel/VBoxContainer"]
visible = false
layout_mode = 2
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Public Multiplayer Lobby/VBoxContainer/Players List Panel/VBoxContainer/Player_2_Stats_HBOX"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 295
alignment = 1

[node name="Player Name" type="Label" parent="Control/Public Multiplayer Lobby/VBoxContainer/Players List Panel/VBoxContainer/Player_2_Stats_HBOX/HBoxContainer"]
layout_mode = 2
text = "Host"

[node name="Player Civilization" type="Label" parent="Control/Public Multiplayer Lobby/VBoxContainer/Players List Panel/VBoxContainer/Player_2_Stats_HBOX/HBoxContainer"]
layout_mode = 2
text = "Furry"

[node name="Player Status" type="Label" parent="Control/Public Multiplayer Lobby/VBoxContainer/Players List Panel/VBoxContainer/Player_2_Stats_HBOX/HBoxContainer"]
layout_mode = 2
text = "Not Ready"

[node name="Chat Panel" type="Panel" parent="Control/Public Multiplayer Lobby/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.42
script = ExtResource("3_1ehe0")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Public Multiplayer Lobby/VBoxContainer/Chat Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Chat_Log" type="RichTextLabel" parent="Control/Public Multiplayer Lobby/VBoxContainer/Chat Panel/VBoxContainer"]
z_index = 1
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.14
bbcode_enabled = true
metadata/_edit_use_anchors_ = true

[node name="Chat_Line" type="LineEdit" parent="Control/Public Multiplayer Lobby/VBoxContainer/Chat Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme_override_colors/font_placeholder_color = Color(1, 1, 1, 0.25098)
placeholder_text = "Press enter to send message"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Control/CanvasLayer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Control/CanvasLayer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Control/CanvasLayer/Back to Start Menu Button" to="Control" method="_on_back_to_Start_menu_clicked"]
[connection signal="toggled" from="Control/CanvasLayer/Lobby Ready Button" to="Control/CanvasLayer/Lobby Ready Button" method="_on_toggled"]
[connection signal="pressed" from="Control/Single Or Multiplayer/VBoxContainer/Multiplayer Button" to="Control" method="_on_multiplayer_selected"]
[connection signal="pressed" from="Control/Multiplayer Local or Steam/VBoxContainer/Public Multiplayer Button" to="Control" method="_on_public_multiplayer_clicked"]
[connection signal="pressed" from="Control/Multiplayer Local or Steam/VBoxContainer/Local Multiplayer Button" to="Control" method="_on_local_multiplayer_clicked"]
[connection signal="pressed" from="Control/Local Multiplayer/VBoxContainer/Host Local Buton" to="Control" method="_on_local_multiplayer_host"]
[connection signal="pressed" from="Control/Local Multiplayer/VBoxContainer/Join Local Buton" to="Control" method="_on_local_multiplayer_join"]
[connection signal="pressed" from="Control/Public Multiplayer/VBoxContainer/Host Multiplayer Steam Buton" to="Control" method="_on_public_multiplayer_host_clicked"]
[connection signal="pressed" from="Control/Public Multiplayer/VBoxContainer/Join Multiplayer Steam Buton" to="Control" method="_on_public_multiplayer_join_clicked"]
[connection signal="pressed" from="Control/Public Multiplayer/Refresh Lobby List" to="Control" method="refresh_lobby_list"]
[connection signal="text_submitted" from="Control/Public Multiplayer Lobby/VBoxContainer/Chat Panel/VBoxContainer/Chat_Line" to="Control/Public Multiplayer Lobby/VBoxContainer/Chat Panel" method="_on_chat_line_text_submitted"]
